    same way it is already supported for remote blocklists
    NOTE: pgld already had builtin support for gz packed lists, if it was
    compiled with zlib support.
  * use sed instead of echo to add newline at end of blocklist
  * use pushd and popd before/after downloading blocklists (instead of only
    cd'ing into the directory, but not leaving again)

  [hasufell]
  * MAKE: do not recreate already existent dirs (Closes: SF bug #325)

 -- jre <jre-phoenix@users.sourceforge.net>  Mon, 12 Nov 2012 18:23:03 +0100


pgl 2.2.2

  [jre]
  * changed default to not log to syslog (LOG_SYSLOG="0")
  * fixed pending ";" in IP_REMOVE results in empty blocklist
  * added "env" to the example WGET_OPTS for proxies. Closes: SF bug #3581707
  * fixed reading ipfilter.dat lines which contain a : in the decription
  * updated documentation

  [hasufell]
  * added gentoo init script, accessible via --with-gentoo-init
  * cleaned up configure.ac (AM_CFLAGS)

  [freemind]
  * fixed bug that prevented apply button from getting enabled.
  * modified iptables related functions to use always port numbers and not
    names (fix)
  * fixed pglgui crashes if you try to whitelist permanently, while pgl is not
    running.
  * code refacturing

 -- jre <jre-phoenix@users.sourceforge.net>  Mon, 25 Jun 2012 16:09:21 +0200


pgl 2.2.1

  [jre]
  * Disabled dbus closing and reopening on reload. Fixes bug "pgld binaries
    built under Ubuntu Oneiric, Precise and Mint 12 crash on reload" (Closes:
    SF Bug #3495654)
  * fixed Makefile clean target

  [freemind]
  * Fixed log viewer dialog to not close on key press.
  * Added whois action.
  * Minor tweaks.
  * Fixed (random) unapplied changes at start-up bug.
  * Added sortable columns in whitelist view.
  * Added automatic saving and restoring of window's state.

 -- jre <jre-phoenix@users.sourceforge.net>  Mon, 25 Jun 2012 01:01:50 +0200


pgl 2.2.0 The autotools release

  [hasufell]
  * added autotools support

  [freemind]