@@ -20,10 +20,10 @@
 
 ### BEGIN INIT INFO
 # Provides:          pgl
-# Required-Start:    $local_fs $remote_fs $syslog
-# Required-Stop:     $local_fs $remote_fs $syslog
-# Should-Start:      dbus firehol firestarter ufw
-# Should-Stop:       dbus firehol firestarter ufw
+# Required-Start:    $local_fs $remote_fs
+# Required-Stop:     $local_fs $remote_fs
+# Should-Start:      dbus firehol firestarter firewalld ufw $syslog
+# Should-Stop:       dbus firehol firestarter firewalld ufw $syslog
 # Default-Start:     2 3 4 5
 # Default-Stop:      0 1 6
 # Short-Description: PeerGuardian Linux - an IP Blocker
